feat: add endpoint to cast votes, to validate if caller can vote
